--- a/compose.yml
+++ b/compose.yml
@@ -1,12 +1,16 @@
+version: '3.8'
+
 services:
   db:
-    image: postgres
+    image: postgres:13
     restart: always
     environment:
       TZ: Asia/Tokyo
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
+      POSTGRES_DB: myapp_development
     volumes:
-      - postgresql_data:/var/lib/postgresql
+      - postgresql_data:/var/lib/postgresql/data
     ports:
       - 5432:5432
     healthcheck:
@@ -14,6 +18,9 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - app-network
+
   web:
     build:
       context: .
@@ -32,7 +39,14 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    networks:
+      - app-network
+
 volumes:
   bundle_data:
   postgresql_data:
   node_modules:
+
+networks:
+  app-network:
+    driver: bridge
