--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+
 name: CI
 
 on:
@@ -6,6 +7,32 @@ on:
     branches: [ main ]
 
 jobs:
+  scan_ruby:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: .ruby-version
+          bundler-cache: true
+      - name: Scan for common Rails security vulnerabilities using static analysis
+        run: bin/brakeman --no-pager
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: .ruby-version
+          bundler-cache: true
+      - name: Lint code for consistent style
+        run: bin/rubocop -f github
+
   test:
     runs-on: ubuntu-latest
 
@@ -34,16 +61,15 @@ jobs:
 
       - name: Set up database
         env:
-          DATABASE_HOST: localhost
+          DATABASE_URL: postgres://postgres:password@db:5432
         run: |
           bin/rails db:create
           bin/rails db:schema:load
           bin/rails db:test:prepare
-
       - name: Run tests
         env:
           RAILS_ENV: test
-          DATABASE_HOST: localhost
+          DATABASE_URL: postgres://postgres:password@db:5432
         run: bin/rails test test:system
 
       - name: Keep screenshots from failed system tests
