--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-
 name: CI
 
 on:
@@ -35,16 +34,22 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    env:
+      DATABASE_HOST: db  # ジョブ全体でDATABASE_HOSTを設定
 
     services:
       db:
-        image: postgres
+        image: postgres:14  # 安定したバージョンを指定
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
         ports:
           - 5432:5432
-        options: --health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=5
+        options: >-
+          --health-cmd="pg_isready -U postgres" 
+          --health-interval=10s 
+          --health-timeout=5s 
+          --health-retries=5
 
     steps:
       - name: Install packages
@@ -59,17 +64,27 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
 
-      - name: Set up database
-        env:
-          DATABASE_URL: postgres://postgres:password@db:5432
+      - name: Wait for PostgreSQL to be ready
         run: |
-          bin/rails db:create
-          bin/rails db:schema:load
-          bin/rails db:test:prepare
+          until pg_isready -h db -U postgres; do
+            echo "Waiting for PostgreSQL..."
+            sleep 1
+          done
+
+      - name: Check DB connectivity
+        run: |
+          ping -c 3 db
+          nslookup db
+
+      - name: Set up database
+        run: |
+          bin/rails db:create --trace
+          bin/rails db:schema:load --trace
+          bin/rails db:test:prepare --trace
+
       - name: Run tests
         env:
           RAILS_ENV: test
-          DATABASE_URL: postgres://postgres:password@db:5432
         run: bin/rails test test:system
 
       - name: Keep screenshots from failed system tests
