--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "app",
   "private": true,
   "devDependencies": {
-    "esbuild": "^0.24.0"
+    "autoprefixer": "^10.4.20",
+    "esbuild": "^0.24.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
@@ -11,9 +14,6 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
-    "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.13",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "daisyui": "^4.12.13"
   }
 }
