--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "app",
   "private": true,
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "esbuild": "^0.24.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15"
-  },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
-    "@hotwired/turbo-rails": "^8.0.12",
+    "@hotwired/turbo-rails": "^8.0.12"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "esbuild": "^0.24.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "daisyui": "^4.12.13"
   }
 }
