--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.13",
     "esbuild": "^0.24.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "daisyui": "^4.12.13"
+    "tailwindcss": "^3.4.16"
   }
 }
