--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,7 @@ jobs:
         env:
           RAILS_ENV: test
         run: |
-          cp config/database.yml
+          cp config/database.yml.example config/database.yml
           bin/rails db:create
           bin/rails db:migrate
 
