--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,8 +75,6 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
-        ports:
-          - 5432:5432
         options: --health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
@@ -100,8 +98,19 @@ jobs:
       - name: Bundle install
         run: bundle install --jobs 4 --retry 3
 
-      - name: Verify ImageMagick installation
-        run: pkg-config --cflags --libs MagickCore
+      # ここでホスト解決をテスト
+      - name: Check host resolution
+        run: |
+          ping -c 1 postgres || echo "Could not resolve 'postgres' host"
+
+      # PostgreSQL起動を待機
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          for i in {1..10}; do
+            pg_isready -h postgres -U postgres -p 5432 && break
+            echo "Waiting for postgres to be ready..."
+            sleep 3
+          done
 
       - name: Database create and migrate
         run: |
